<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="http://schemas.moonlight-stream.com/apk/res/seekbar">

    <CheckBoxPreference
        android:key="checkbox_use_global_settings"
        android:title="Use Global Settings"
        android:summary="Use the global stream settings for this app"
        android:defaultValue="true" />

    <PreferenceCategory 
        android:key="category_app_specific"
        android:title="App-Specific Settings">
        <Preference
            android:key="pref_app_resolution"
            android:title="@string/title_resolution_list"
            android:summary="@string/summary_resolution_list" />
        <EditTextPreference
            android:key="text_app_fps"
            android:title="@string/title_fps_list"
            android:summary="@string/summary_fps_list"
            android:inputType="number"
            android:dialogMessage="Enter FPS value" />
        <EditTextPreference
            android:key="text_app_bitrate_kbps"
            android:title="@string/title_seekbar_bitrate"
            android:summary="@string/summary_seekbar_bitrate"
            android:inputType="number"
            android:dialogMessage="Enter bitrate in Mbps (e.g. 50)" />
        <ListPreference
            android:key="list_app_frame_pacing"
            android:title="@string/title_frame_pacing"
            android:entries="@array/video_frame_pacing_names"
            android:entryValues="@array/video_frame_pacing_values"
            android:summary="@string/summary_frame_pacing" />
        <EditTextPreference
            android:key="text_actual_display_refresh_rate"
            android:title="Actual display refresh rate"
            android:summary="The actual refresh rate of the display connected to your device, in case it is not the same even number as the FPS. Host should have the same refresh rate or frame rate cap for best smoothness. Leave as '0' for same as stream FPS"
            android:inputType="numberDecimal" />
        <CheckBoxPreference
            android:key="checkbox_enable_perf_overlay"
            android:title="@string/title_enable_perf_overlay"
            android:summary="@string/summary_enable_perf_overlay" />
    </PreferenceCategory>

</PreferenceScreen>